--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,91 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* Custom Styles from Landing Page */
+
+/* Card Styles */
+.card {
+  max-width: 320px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 1.5rem;
+  background-color: rgba(0, 0, 0, 1);
+  padding: 1.5rem;
+  color: white;
+  transition: transform 0.2s;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+}
+
+.price {
+  font-size: 2rem;
+  line-height: 1;
+  font-weight: 300;
+  letter-spacing: -0.025em;
+  color: rgba(255, 255, 255, 1);
+  margin-bottom: 0.5rem;
+}
+
+.lists {
+  margin-top: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  grid-row-gap: 0.75rem;
+  row-gap: 0.75rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: rgba(255, 255, 255, 1);
+}
+
+.list {
+  display: flex;
+  align-items: center;
+}
+
+.list svg {
+  height: 1rem;
+  width: 1rem;
+  fill: white;
+}
+
+.list span {
+  margin-left: 1rem;
+}
+
+/* Custom Button Style */
+.btn-premium {
+  position: relative;
+  padding: 0.5rem 2rem;
+  border-radius: 0.375rem;
+  background-color: white;
+  isolation: isolate;
+  z-index: 10;
+  border: 2px solid #09090b; /* zinc-950 */
+  overflow: hidden;
+  transition: color 0.3s;
+  font-weight: 600;
+}
+
+.btn-premium::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%; /* Ensure it covers the button */
+  top: 0;
+  right: -100%; /* Start off-screen */
+  border-radius: 9999px; /* Rounded full */
+  background-color: #eab308; /* yellow-500 */
+  z-index: -1;
+  transition: all 0.7s;
+  aspect-ratio: 1/1;
+}
+
+.btn-premium:hover::before {
+  right: 0;
+  width: 100%;
+  border-radius: 0; /* Expand to fill */
+  transform: scale(1.5);
+}
